--- a/src/app/dashboard-header/dashboard-header.component.html
+++ b/src/app/dashboard-header/dashboard-header.component.html
@@ -1,4 +1,4 @@
-<div class="container header">
+<div class="container-fluid header">
   <div class="leftCol">
     <p class="hello">Hello</p>
     <h6 class="personName">{{fname}}</h6>
