--- a/src/app/donation/donation.component.html
+++ b/src/app/donation/donation.component.html
@@ -1,5 +1,5 @@
 <app-dashboard-header></app-dashboard-header>
-<div class="container pb-5">
+<div class="container-fluid pb-5">
     <div class="row pt-3 m-2 p-1 donationComponent">
       <div class="upperHeading">
         <h2 class="m-1">Donation</h2>
