--- a/src/app/forget-password/forget-password.component.css
+++ b/src/app/forget-password/forget-password.component.css
@@ -1,26 +1,6 @@
 /* common.css*/
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700&subset=latin,latin-ext");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic,greek");
-html,body,div,input {
-    padding: 0;
-    margin: 0
-}
+.forgot-password{
 
-html,body,div,input,textarea,button,select {
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box
-}
-
-body {
-    color: #423e3e;
-    background-color: #fafafa;
-    font-size: 16px;
-    font-weight: 400
 }
 
 body,input,button {
@@ -54,14 +34,11 @@ a[target="_blank"],a[target="_blank"]:visited {
     text-align: center
 }
 
-
-/* forgot-password.css*/
-
 .card {
     max-width: 370px;
     min-width: 300px;
     margin: 40px auto 20px auto;
-    padding: 0 10px
+    padding: 0 10px;
 }
 
 .errors {
