--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -1,11 +1,8 @@
-<app-dashboard-header></app-dashboard-header>
-
-<div class="logo"></div>
+<app-header></app-header>
 
 <div class="card forgot-password">
 
-    <form action="/forgotpassword" method="POST"
-        class="auth-form forgot-password">
+    <form action="/forgotpassword" method="POST" class="auth-form forgot-password">
         <div class="row labels">
             <h2>Forgot your password?</h2>
             <h3>Don't worry. Just enter your email address below and we'll send
@@ -17,12 +14,12 @@
                 <i class="fa fa-envelope-o fa-lg"></i></span>
             <input type="email" [(ngModel)]="email" #email1="ngModel" name="email" required autofocus autocomplete
                 placeholder="Email" />
-          <br> <span class="textDanger" *ngIf="email1.errors && email1.invalid && email1.touched">Please enter a valid email</span>      
+            <br> <span class="textDanger" *ngIf="email1.errors && email1.invalid && email1.touched">Please enter a valid
+                email</span>
         </div>
 
         <div class="row submit mt-2">
-            <input type="submit" class="button big blue"
-              (click)="getEmail()"   value="Reset Password" />
+            <input type="submit" class="button big blue" (click)="getEmail()" value="Reset Password" />
         </div>
     </form>
 
