--- a/src/app/welcome-screen/welcome-screen.component.html
+++ b/src/app/welcome-screen/welcome-screen.component.html
@@ -11,7 +11,7 @@
                 &nbsp; &nbsp; &nbsp; your interest and study major</p>
         </div>
     </div>
-    <div class="row submit_btn justify-content-center">
+    <div class="row submit_btn">
         <input type="submit" value="Login" routerLink="/login" class="loginBtn">
         <input type="submit" value="Register" routerLink="/register" class="registerBtn">
     </div>
