--- a/src/app/dashboard-header/dashboard-header.component.css
+++ b/src/app/dashboard-header/dashboard-header.component.css
@@ -1,7 +1,8 @@
 .header{
     display: flex;
     flex-direction: row;
-    font-size: 11px;
+    justify-content: space-between;
+    align-items: center;
     gap: 35px;
     margin-top: 10px;
     font-weight: bold;
@@ -20,15 +21,14 @@
 }
 
 
-
 .centerCol img{
-  width: 150px;
+  width: 12rem;
   height:auto;
 }
 
 .rightCol img{
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   margin-top: 3px;
   margin-left: 20px;
