--- a/src/app/edit-profile/edit-profile.component.css
+++ b/src/app/edit-profile/edit-profile.component.css
@@ -1,39 +1,51 @@
+.container-fluid{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .edit h4{
     margin-top: -30px;
 }
 
 .edit img{
-    width: 40px;
+    width: 50px;
     height: auto;
     border-radius: 50%;
-    position: relative;
-    z-index: 1;
-    left: 130px;
-    top: 5px;
+    margin-top: 1rem;
     outline: 1px solid #12AA04;
 }
 
 .edit i{
     border: 1px solid black;
     padding: 6px;
-    margin-top: 10px;
+    margin-top: 20px;
     cursor: pointer;
+    margin-right: 37rem;
+}
+
+form{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .profileForm{
     z-index: 2;
-    position: absolute;
-    top: 80px;
 }
 
 .profileForm input,
 select {
-    width: 140%;
+    width: 100%;
     outline: 1px solid #12AA04;
     border: none;
     margin-top: 4px;
     border-radius: 7px;
-    padding: 3px;
+    padding: 6px;
+    display: flex;
+    flex-direction: column;
 }
 
 .profileForm label {
@@ -45,10 +57,10 @@ input[type="submit"] {
     color: white;
     font-weight: 600;
     outline: none !important;
-    width: 150px !important;
+    width: 100% !important;
     font-size: 15px;
     margin-top: 30px !important;
-    margin-left: 80px;
+    text-align: center;
 }
 
 .alert-success{
@@ -68,4 +80,9 @@ input[type="submit"] {
 
 .alert-success .close span {
     margin-left: 0.1rem;
+}
+
+label{
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
