--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,41 @@
 <app-header></app-header>
-<div class="container loginBlock">
+<div class="container-fluid loginBlock">
     <div class="row">
-        <div class="col-12 welcome_text">
-            <h2>Login here </h2>
-            <p> Welcome back you've <br>
-                been missed! </p>
+        <div class="col-12 welcome_text mt-4">
+            <h2>Login here</h2>
+            <p>Welcome back, you've  been missed!</p>
         </div>
     </div>
-    <div class="row">
-        <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
-           <strong>Oops!</strong> Credentials is wrong.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-    <div class="row">
-        <form #loginForm="ngForm" (ngSubmit)="doLogin(loginForm.value)" class="form">
-            <input type="email" #email1="ngModel" required placeholder="Email" [(ngModel)]="email"
-                name="email">
-              <br> <span *ngIf="email1.errors && email1.touched && email1.invalid"  class="textDanger">Please enter a valid email</span> 
-            <input type="password" placeholder="Password" required #password1="ngModel" [(ngModel)]="password"
-                name="password">
-                <br> <span *ngIf="password1.invalid && (password1.dirty || password1.touched)"class="textDanger">Please enter a password</span>    
-            <p routerLink="/forget_password" class="forgot">Forgot your password?</p>
-            <input type="submit" value="Login">
-            <p routerLink="/register" class="create">Create new account</p>
-        </form>
+    <div class="row mt-3">
+        <div class="col-12">
+            <div *ngIf="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>Oops!</strong> Credentials are wrong.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+        <div class="col-12 loginBlockInput">
+            <form #loginForm="ngForm" (ngSubmit)="doLogin(loginForm.value)" class="form">
+                <div class="form_div">
+                    <input type="email" #email1="ngModel" required placeholder="Email" [(ngModel)]="email" name="email">
+                </div>
+                <span *ngIf="email1.errors && email1.touched && email1.invalid" class="textDanger">Please enter a valid
+                    email</span>
+
+                <div class="form_div">
+                    <input type="password" placeholder="Password" required #password1="ngModel" [(ngModel)]="password"
+                        name="password">
+                </div>
+                <span *ngIf="password1.invalid && (password1.dirty || password1.touched)" class="textDanger">Please
+                    enter a password</span>
+
+                <p routerLink="/forget_password" class="forgot">Forgot your password?</p>
+
+                <input type="submit" value="Login" routerLink="/blog">
+
+                <p routerLink="/register" class="create">Create new account</p>
+            </form>
+        </div>
     </div>
 </div>
